--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 /* Global */
+
+body {
+    font-family: var(--lato-font);
+    font-weight: 400;
+}
+
+h1 {
+    font-size: xx-large;
+}
+
+h2 {
+    font-size: x-large;
+}
+
+h3 {
+    font-size: large;
+}
 
 .container-fluid {
     max-width: 100%;
@@ -69,4 +88,20 @@
 }
 .burger.burger-rotate.open .burger-lines:after {
     transform: rotate(-135deg);
+}
+
+
+/* Heart animation */
+
+.like {
+    width: 500px;
+    height: 500px;
+    transform: scale(0);
+    transition: transform 800ms ease-in-out;
+}
+
+.unlike {
+    width: 0;
+    transform: scale(3);
+
 }
