--- a/styles/global.css
+++ b/styles/global.css
@@ -158,3 +158,30 @@ animation-name: fadeInUp;
     -webkit-animation-name: fadeOutDown;
     animation-name: fadeOutDown;
 }
+
+
+/* Toggle */
+
+input[type="checkbox"]:checked + label {
+	background-color: #959492;
+    transition: all 300ms ease-in-out;
+
+}
+
+input[type="checkbox"] + label {
+    background-color: white;
+    transition: all 300ms ease-in-out;
+
+}
+
+input[type="checkbox"]:checked + label span {
+    margin-left: 14px;
+	background-color: white;
+    transition: all 300ms ease-in-out;
+}
+
+input[type="checkbox"] + label span {
+    margin-left: 0;
+	background-color: #959492;
+    transition: all 300ms ease-in-out;
+}
